tests/baselines/reference/parserVariableDeclaration1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts (4 errors) ====
    
    		var selection = a, 
    		                ~
!!! error TS2304: Cannot find name 'a'.
    			position = b,
    			           ~
!!! error TS2304: Cannot find name 'b'.
    			model = c,
    			        ~
!!! error TS2304: Cannot find name 'c'.
    			support = d;
    			          ~
!!! error TS2304: Cannot find name 'd'.